--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <jjwt.version>0.11.1</jjwt.version>
         <problem.version>0.26.1</problem.version>
         <bootstrap.version>4.5.0</bootstrap.version>
+        <redisson.version>3.12.5</redisson.version>
+        <embedded.redis.version>0.7.2</embedded.redis.version>
     </properties>
 
     <dependencies>
@@ -53,6 +55,20 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <!-- Redisson 依赖 -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>${redisson.version}</version>
+        </dependency>
+
+        <!-- 嵌入式 Redis 依赖，集成测试时需要 -->
+        <dependency>
+            <groupId>it.ozimov</groupId>
+            <artifactId>embedded-redis</artifactId>
+            <version>${embedded.redis.version}</version>
         </dependency>
 
         <!-- 异常的统一处理 -->
